@@ -34,6 +34,7 @@ MainMemoryViewer::MainMemoryViewer(QWidget* parent)
         hexView = new HexViewer;
 	hexView->setUseMarker(true);
 	hexView->setIsEditable(true);
+	hexView->setEnabledScrollBar(true);
         QHBoxLayout *hbox = new QHBoxLayout;
         hbox->setMargin(0);
         hbox->addWidget( addressSourceList );
